Version 2.5.0
-----------------------------------------------------------------------
5 June 2008
+ Added an error check to Permissions (Thanks Hilmar).

4 June 2008
+ Commented password creation table row.
+ Users will now look for remove_user.php in all modules' inc/
  directory in order to run the remove_user function.

3 June 2008
+ Using pager's addSortHeaders in user and group listing
+ Updated: templates/manager/groups.tpl, templates/manager/users.tpl

26 May 2008
+ Members' names alphabetized

29 April 2008
+ Fixed: choosing 'Do not notify' after creating a user was failing.

15 April 2008
+ Testing new user notification.
+ Fixed member listing  dropping names past 10.
+ Added random password generator on user edit form.
+ Removed reference from Action.php causing php notice.
+ Changed redundant static method call in Permission.
+ Added dash to allowed display name characters.
+ Added \pL to display name characters.
+ Updated: 
  templates/forms/memberlist.tpl, templates/forms/userForm.tpl,
  javascript/generate/head.js

Version 2.4.9
-----------------------------------------------------------------------
21 March 2008
+ Install.php and update.php are now creating groups for branch copied
  deities.

20 March 2008
+ Now uses second display() parameter in controlpanel::display to hold
  my_page as current tab

12 March 2008
+ My Pages are unregistered on module deletion (thanks Verdon).

7 March 2008
+ Raised sql character limit in default username, display_name, and
  group name installs.

3 March 2008
+ Fixed bug with forbidden usernames
+ Added a function to group to remove its permissions upon deletion.

20 February 2008
+ Removing banned user code. Let Access handle it.

23 January 2008
+ bookmark won't return a user to a authkey page if their session dies.

9 January 2008
+ Added missing table users_banned to update and install sql. *removed

4 January 2008
+ Fixed bug #1850815 : unknown function itemIsAllowed in Permission-php

14 December 2007