@@ -1,3 +1,9 @@
+19 June 2008
++ Added cacheQueries to the user pager. Delete was dropping preferences.
++ Added setRequired to username and email in user form.
++ Changed user template submit button
++ Updated : templates/forms/userForm.tpl
+
 Version 2.5.0
 -----------------------------------------------------------------------
 5 June 2008
